--- a/auth-login.html
+++ b/auth-login.html
@@ -1,102 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>BU - USC|CSC Election</title>
+		<link
+			rel="shortcut icon"
+			href="assets/images/logo/BU.png"
+			type="image/x-icon"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="assets/css/bootstrap.css" />
+		<link
+			rel="stylesheet"
+			href="assets/vendors/bootstrap-icons/bootstrap-icons.css"
+		/>
+		<link rel="stylesheet" href="assets/css/app.css" />
+		<link rel="stylesheet" href="assets/css/pages/auth.css" />
+		<link
+			rel="stylesheet"
+			href="assets/css/@sweetalert2/theme-bootstrap-4/bootstrap-4.css"
+		/>
+		<link rel="stylesheet" href="assets/css/clock.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BU - USC|CSC Election</title>
-    <link rel="shortcut icon" href="assets/images/logo/BU.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/vendors/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/app.css">
-    <link rel="stylesheet" href="assets/css/pages/auth.css">
-    <link rel="stylesheet" href="assets/css/@sweetalert2/theme-bootstrap-4/bootstrap-4.css">
-    <link rel="stylesheet" href="assets/css/clock.css">
-</head>
-
-<body>
-    <div id="auth">
-        <div class="row h-100">
-            <div class="col-lg-5 col-12">
-                <div id="auth-left">
-                    <div class="auth-logo ">
-                        <img src="assets/images/logo/usclogo.ico" style="height: 80px;" alt="Logo">
-                    </div>
-                    <h4 class="auth-title auth-subtitle" id="sub"></h4>
-                        <div id="clockdiv" style="display:none">
-                            <div>
-                                <span class="days"></span>
-                                <div class="smalltext">Days</div>
-                            </div>
-                            <div>
-                                <span class="hours"></span>
-                                <div class="smalltext">Hours</div>
-                            </div>
-                            <div>
-                                <span class="minutes"></span>
-                                <div class="smalltext">Minutes</div>
-                            </div>
-                            <div>
-                                <span class="seconds"></span>
-                                <div class="smalltext">Seconds</div>
-                            </div>
-                        </div>
-                        <button type="button" class="btn btn-lg shadow-lg mt-3" data-bs-toggle="modal"
-                        data-bs-target="#inlineForm" id="EnterElection" style="background-color:#F37328; color:white; display:none;">
-                        Enter
-                    </button>
-                     <!--login form Modal -->
-                    <div class="modal fade text-left" id="inlineForm" tabindex="-1"
-                    role="dialog" aria-labelledby="myModalLabel33" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
-                        role="document">
-                        <div class="modal-content">
-                            <div class="modal-header bg-light">
-                                <h4 class="modal-title" id="myModalLabel33"  style="color:black">Enter Your Student ID And College </h4>
-                            </div>
-                            <form method="POST" action = "" id="verifyID">
-                                <div class="modal-body">
-                                    <label>Student ID </label>
-                                        <input type="text" placeholder="Student ID"
-                                            class="form-control" id ="studId">
-                                    <label>College </label>
-                                    <select class="form-select" id="colleges">
-                                        <option value=""selected disabled>Select College</option>
-                                        <option value="College of Science">College of Science</option>
-                                        <option value="College of Arts and Letters">College of Arts and Letters</option>
-                                        <option value="College of Education">College of Education</option>
-                                        <option value="College of Nursing">College of Nursing</option>
-                                        <option value="College of Education">College of Education</option>
-                                        <option value="College of Engineering">College of Engineering</option>
-                                        <option value="College of Social Science and Philosophy">College of Social Science and Philosophy</option>
-                                        <option value="College of Business, Economics and Management">College of Business, Economics and Management</option>
-                                        <option value="College of Agriculture and Forestry">College of Agriculture and Forestry</option>
-                                        <option value="IPESR">IPESR</option>
-                                    </select>
-                                </div>
-                                <div class="modal-footer">
-                                    <input class="btn btn-light-secondary ml-1" type="button" data-bs-dismiss="modal" value="Close">
-                                    <input class="btn btn-primary ml-1" type="submit" value="Verify">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-lg-7 d-none d-lg-block">
-                <div id="auth-right">
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="assets/js/bootstrap.bundle.min.js"></script> 
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/auth-login.js"></script>
-    <script src="assets/js/sweetalert2/dist/sweetalert2.min.js"></script>
-</body>
-
+	<body>
+		<div id="auth">
+			<div class="row h-100">
+				<div class="col-lg-5 col-12">
+					<div id="auth-left">
+						<div class="auth-logo">
+							<img
+								src="assets/images/logo/usclogo.ico"
+								style="height: 80px"
+								alt="Logo"
+							/>
+						</div>
+						<h4 class="auth-title auth-subtitle" id="sub"></h4>
+						<div id="clockdiv" style="display: none">
+							<div>
+								<span class="days"></span>
+								<div class="smalltext">Days</div>
+							</div>
+							<div>
+								<span class="hours"></span>
+								<div class="smalltext">Hours</div>
+							</div>
+							<div>
+								<span class="minutes"></span>
+								<div class="smalltext">Minutes</div>
+							</div>
+							<div>
+								<span class="seconds"></span>
+								<div class="smalltext">Seconds</div>
+							</div>
+						</div>
+						<button
+							type="button"
+							class="btn btn-lg shadow-lg mt-3"
+							data-bs-toggle="modal"
+							data-bs-target="#inlineForm"
+							id="EnterElection"
+							style="background-color: #f37328; color: white; display: none"
+						>
+							Enter
+						</button>
+						<!--login form Modal -->
+						<div
+							class="modal fade text-left"
+							id="inlineForm"
+							tabindex="-1"
+							role="dialog"
+							aria-labelledby="myModalLabel33"
+							aria-hidden="true"
+						>
+							<div
+								class="
+									modal-dialog modal-dialog-centered modal-dialog-scrollable
+								"
+								role="document"
+							>
+								<div class="modal-content">
+									<div class="modal-header bg-light">
+										<h4
+											class="modal-title"
+											id="myModalLabel33"
+											style="color: black"
+										>
+											Enter Your Student ID And College
+										</h4>
+									</div>
+									<form method="POST" action="" id="verifyID">
+										<div class="modal-body">
+											<label>Student ID </label>
+											<input
+												type="text"
+												placeholder="Student ID"
+												class="form-control"
+												id="studId"
+											/>
+											<label>College </label>
+											<select class="form-select" id="colleges">
+												<option value="" selected disabled>
+													Select College
+												</option>
+												<option value="College of Science">
+													College of Science
+												</option>
+												<option value="College of Arts and Letters">
+													College of Arts and Letters
+												</option>
+												<option value="College of Education">
+													College of Education
+												</option>
+												<option value="College of Nursing">
+													College of Nursing
+												</option>
+												<option value="College of Education">
+													College of Education
+												</option>
+												<option value="College of Engineering">
+													College of Engineering
+												</option>
+												<option
+													value="College of Social Science and Philosophy"
+												>
+													College of Social Science and Philosophy
+												</option>
+												<option
+													value="College of Business, Economics and Management"
+												>
+													College of Business, Economics and Management
+												</option>
+												<option value="College of Agriculture and Forestry">
+													College of Agriculture and Forestry
+												</option>
+												<option value="IPESR">IPESR</option>
+											</select>
+										</div>
+										<div class="modal-footer">
+											<input
+												class="btn btn-light-secondary ml-1"
+												type="button"
+												data-bs-dismiss="modal"
+												value="Close"
+											/>
+											<input
+												class="btn btn-primary ml-1"
+												type="submit"
+												value="Verify"
+											/>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-7 d-none d-lg-block">
+					<div id="auth-right"></div>
+				</div>
+			</div>
+		</div>
+		<script src="assets/js/bootstrap.bundle.min.js"></script>
+		<script src="assets/js/jquery-3.6.0.min.js"></script>
+		<script src="assets/js/auth-login.js"></script>
+		<script src="assets/js/sweetalert2/dist/sweetalert2.min.js"></script>
+	</body>
 </html>
