Fixed Image and After Countdown Action

--- a/auth-login.html
+++ b/auth-login.html
@@ -37,7 +37,7 @@
 						<div class="auth-logo">
 							<img
 								src="assets/images/logo/usclogo.ico"
-								style="height: 80px"
+								style="height: auto; max-width: 100%"
 								alt="Logo"
 							/>
 						</div>
