--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <!----------------------------------------------------------------USC VOTING SECTION---------------------------------------------------------------->
                     <center>
                         <p>
-                            <h3 style="color: rgb(255, 255, 255); background-color: #1E95DB; border-radius: 20px">USC CANDIDATES</h3>
+                            <h3 style="color: rgb(255, 255, 255); background-color: gray; border-radius: 20px">USC CANDIDATES</h3>
                         </p>
                     </center>
                     <div class=" col-xl-12" class="col-form-label justify-content-center align-items-center align-content-center align-self-center">
@@ -60,7 +60,7 @@
                     <!----------------------------------------------------------------CSC VOTING SECTION---------------------------------------------------------------->
                     <center>
                         <p>
-                            <h3 style="color: #ffffff; background-color: #FB6F19; border-radius: 20px">CSC CANDIDATES</h3>
+                            <h3 style="color: #ffffff; background-color: gray; border-radius: 20px">CSC CANDIDATES</h3>
                         </p>
                     </center>
                     <div class=" col-xl-12" class="col-form-label justify-content-center align-items-center align-content-center align-self-center">
